--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,15 @@
   <title>Document Title</title>
 </head>
 <body>
-  <h1>Welcome to CS 2350!</h1>
-  todo
+  <div class="container">
+    <form id="myForm">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+      </div>  
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
   <script src="javascripts/application.js"></script>
 </body>
 </html>
